--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -47,7 +47,7 @@
               </mat-card-content>
               <mat-card-actions>
                 <button class="download-button">
-                  <a href="{{category.rulesLink}}" class="download-content-container">
+                  <a href="{{category.rulesLink}}" class="download-content-container text-decoration-none">
                     <img class="download-icon" src="../../../../../assets/image/logos/download.svg" alt="Download icon">
                     <span class="download-text">
                       {{ "ASIMOVCUP.DOWNLOAD_RULEBOOK" | translate }}
