--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -21,7 +21,7 @@
         <div class="aboutus-section">
           <img class="aboutus-image" src="../../../../../assets/image/logos/people.svg" alt="Logo nosotros"/>
           <h2 class="aboutus-section-header">{{ 'ABOUTUS.US.TITLE' | translate }}</h2>
-          <p>{{ 'ABOUTUS.US.TEXT' | translate }}</p>
+          <p class="font-weight-light">{{ 'ABOUTUS.US.TEXT' | translate }}</p>
         </div>
         <div class="section-divider"></div>
         <div class="aboutus-section">
