--- a/src/app/modules/wie/pages/wie.component.html
+++ b/src/app/modules/wie/pages/wie.component.html
@@ -1,4 +1,4 @@
-<div class="bottomLine" id="home">
+<div class="main-container" id="home">
   <div class="container" id="wip">
     <img src="../../../../../assets/image/wie/wie_logo.svg" class="wie-purple-logo" alt="Logo WIE" />
   </div>
