--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -1,12 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
-
 .main-container {
   padding: 0 15%;
   background: rgb(255, 255, 255);
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
   background-size: cover;
   font-size: 1.1rem;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .not-available-background-color {
@@ -158,7 +155,6 @@ footer {
   position: relative;
   bottom: 10%;
   align-content: center;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
   background: rgb(10, 27, 103);
   background: linear-gradient(
       75deg,
@@ -301,7 +297,7 @@ h3 {
 }
 
 .aboutus-section-header {
-  color: #0d47a1;
+  color: var(--bs-ieee-bright-blue);
   font-size: x-large;
 }
 
@@ -424,7 +420,7 @@ h3 {
 
 .subtitle {
   font-size: calc(0.7vw + 0.7rem);
-  color: rgba(13, 71, 161, 0.8);
+  color: var(--bs-ieee-bright-blue);
   font-weight: 600;
   margin-top: 0.5rem;
 }
