--- a/src/app/modules/authentication/register/register.component.html
+++ b/src/app/modules/authentication/register/register.component.html
@@ -1,19 +1,19 @@
 <div class="main-container">
   <div class="row" style="height: 100%">
-    <div class="col-lg-4 col-md-6 col-sm-0 h-100 w-100 d-none d-md-flex d-lg-flex align-items-center justify-content-center mt-4 "
+    <div class="col-lg-4 col-md-6 col-sm-0 h-100 d-none d-md-flex d-lg-flex align-items-center justify-content-center mt-4 "
          style="background-color: #00629B"
     >
       <img alt="itbot" src="../../../../assets/image/login/itbot.png" class="h-50"/>
     </div>
     <div class="mainFrame col-lg-8 col-md-6 col-12" style="padding-top: 160px">
       <div class="row d-flex flex-column h-75 align-items-center justify-content-center">
-        <mat-card class="d-flex flex-column align-items-center" style="width: 80%; max-width: 500px;">
+        <mat-card class="d-flex flex-column align-items-center" style="max-width: 75%; width: fit-content;">
           <mat-card-header>
             <mat-card-title>
               {{ 'REGISTER.TITLE' | translate }}
             </mat-card-title>
           </mat-card-header>
-          <mat-card-content class="login-card-content">
+          <mat-card-content class="login-card-content mt-2">
             <form id="singup-form">
               <div class="w-100">
                 <div class="row">
@@ -69,9 +69,9 @@
               <!--            </div>-->
 
 
-              <div class="row d-flex justify-content-center mt-3">
+              <div class="d-flex justify-content-center mt-3">
                 <div class="mr-2 blue-font">{{ 'REGISTER.ALREADY_SIGNED_UP' | translate }}</div>
-                <a [routerLink]="['/login']">{{ 'REGISTER.LOGIN' | translate }}</a>
+                <a class="font-weight-bolder" [routerLink]="['/login']">{{ 'REGISTER.LOGIN' | translate }}</a>
               </div>
             </form>
           </mat-card-content>
