--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
@@ -6,7 +6,6 @@
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .not-available-background-color{
@@ -30,14 +29,14 @@
 }
 
 p {
-    color: rgb(0, 0, 0);
-    margin-top: 3vmin;
-    margin-bottom: 3vmin;
-    background: rgba(245, 245, 245, 0.2);
-    padding: 3vmin;
-    border-radius: 5vmin;
-    text-align: justify;
-    font-size: 1.1rem;
+  color: rgb(0, 0, 0);
+  margin-top: 3vmin;
+  margin-bottom: 3vmin;
+  background: rgba(245, 245, 245, 0.2);
+  padding: 3vmin;
+  border-radius: 5vmin;
+  text-align: justify;
+  font-size: 1.1rem;
 }
 
 h1 {
@@ -160,7 +159,6 @@ footer {
     position: relative;
     bottom: 10%;
     align-content: center;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     background: rgb(10,27,103);
     background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
     background-size: cover;
@@ -220,7 +218,7 @@ img {
     font-weight: 600;
     margin-top: 0.25rem;
     padding:  0.7rem 1rem 0.7rem 1rem;
-    border: solid rgb(23, 46, 148);
+    border: solid var(--bs-ieee-bright-blue);
     color: rgb(23, 46, 148) !important;
     border-radius: 5px;
     background-color: inherit;
@@ -230,12 +228,12 @@ img {
 .goback-button:hover {
     box-shadow: 0 0 0px 3px rgba(0,0,0,0.2);
     color: white !important;
-    background-color: #0d47a1;
+    background-color: var(--bs-ieee-bright-blue);
     border-color: white;
 }
 
 .goback-button >.button-text {
-    color: rgb(23, 46, 148) !important;
+    color: var(--bs-ieee-bright-blue) !important;
 }
 .goback-button:hover > .button-text{
     color: white !important;
@@ -244,12 +242,12 @@ img {
 .course-title {
     font-size: calc(1.5vw + 1rem);
     font-weight: 400;
-    color: #0d47a1;
+    color: var(--bs-ieee-bright-blue-80);
     letter-spacing: 1px;
 }
 .course-subtitle {
     font-size: calc(0.7vw + 0.7rem);
-    color: rgba(13, 71, 161, 0.8);
+    color: var(--bs-ieee-bright-blue);
     font-weight: 600;
     margin-top: 0.5rem;
 }
@@ -257,8 +255,8 @@ img {
 .ieeecard-button {
     font-weight: 600;
     margin-top: 0.25rem;
-    border: solid rgb(23, 46, 148);
-    color: rgb(23, 46, 148) !important;
+    border: solid var(--bs-ieee-bright-blue);
+    color: var(--bs-ieee-bright-blue) !important;
     border-radius: 5px;
     background-color: inherit;
     border-width: 3px;
@@ -267,7 +265,7 @@ img {
 .ieeecard-button:hover {
     box-shadow: 0 0 0px 3px rgba(0,0,0,0.2);
     color: white !important;
-    background-color: #0d47a1;
+    background-color: var(--bs-ieee-bright-blue);
     border-color: white;
   }
 .button-disabled{
@@ -303,12 +301,12 @@ img {
     margin-bottom:4rem;
 }
 .tyc-subtitle{
-    color:rgb(23, 46, 148);
+    color:var(--bs-ieee-bright-blue);
     font-size:1.6rem;
     margin:1.5rem 20px 5px;
 }
 .tyc-item{
-    color:rgb(23, 46, 148);
+    color:var(--bs-ieee-bright-blue);
     font-size:1.3rem;
     margin:0.5rem 0 0.5rem 20px;
 }
@@ -323,7 +321,7 @@ img {
 /** tomado de team component css */
 
 ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
-    color:rgb(23, 46, 148);
+    color:var(--bs-ieee-bright-blue);
     background-color: transparent;
 }
 
@@ -332,7 +330,7 @@ img {
 }
 
 ::ng-deep .mat-expansion-indicator::after {
-    color:rgb(23, 46, 148);
+    color:var(--bs-ieee-bright-blue);
 }
 
 mat-panel-description {
@@ -345,10 +343,10 @@ mat-expansion-panel {
 }
 
 mat-expansion-panel-header {
-    border: rgb(23, 46, 148) 1px solid;
+    border: var(--bs-ieee-bright-blue) 1px solid;
     border-radius: 5vmin;
 }
 
 mat-panel-title {
-    color:rgb(23, 46, 148);
+    color:var(--bs-ieee-bright-blue);
 }
