--- a/src/app/modules/wie/pages/wie.component.css
+++ b/src/app/modules/wie/pages/wie.component.css
@@ -9,7 +9,6 @@
   background: rgb(255, 255, 255);
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
   background-size: cover;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
   --wie-purple: #702f8a;
   --wie-dark-purple: #451754;
 }
@@ -17,7 +16,7 @@
 .bottomLine {
 padding-top: 5vmin;
 padding-bottom: 3vmin;
-border-bottom: rgb(10, 27, 103) 2px solid;
+border-bottom: var(--bs-ieee-bright-blue) 2px solid;
 vertical-align: middle;
 align-content: center;
 }
