--- a/src/app/modules/write-news/pages/write-news/write-news.component.css
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.css
@@ -2,7 +2,6 @@
   background: rgb(255, 255, 255);
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
   background-size: cover;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   padding: 160px 5% 10%;
 }
 
@@ -40,7 +39,6 @@
 }
 
 .preview-title {
-  font-family: Calibri, sans-serif;
   color: #373a3c;
   font-weight: 600;
   font-size: 40px;
@@ -163,15 +161,15 @@
 }
 
 .page-title {
-    color: #0d47a1;
+    color: var(--bs-ieee-bright-blue);
 	font-size: 2.5em;
   margin: 0;
 }
 
 .topbottomLine {
     padding: 15px 0;
-    border-top:#0d47a1 2px solid;
-    border-bottom: #0d47a1 2px solid;
+    border-top:var(--bs-ieee-bright-blue) 2px solid;
+    border-bottom: var(--bs-ieee-bright-blue) 2px solid;
     vertical-align: middle;
     align-content: center;
 }
