--- a/src/app/shared/components/sponsor-component/sponsor-component.component.css
+++ b/src/app/shared/components/sponsor-component/sponsor-component.component.css
@@ -1,17 +1,3 @@
-html {
-    min-height: 100%;
-    height: auto;
-}
-
-body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    padding-top: 160px;
-    padding-bottom: 3%;
-}
 /* Thick red border */
 
 .sponsor-listing {
@@ -33,7 +19,7 @@ hr.new {
   }
 
 .page-title {
-    color: #0d47a1;
+    color: var(--bs-ieee-bright-blue);
 	font-size: 2.5em;
 }
 
@@ -72,8 +58,8 @@ hr.new {
 }
 
 .topbottomLine {
-    border-top:#0d47a1 2px solid;
-    border-bottom: #0d47a1 2px solid;
+    border-top:var(--bs-ieee-bright-blue) 2px solid;
+    border-bottom: var(--bs-ieee-bright-blue) 2px solid;
     vertical-align: middle;
     align-content: center;
 
@@ -117,7 +103,7 @@ hr.new {
 }
 
 .subtitle{
-    color: #0d47a1;
+    color: var(--bs-ieee-bright-blue);
     font-weight: 500;
     font-size: 24px;
 }
