--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -43,7 +43,7 @@
   <div class="col-lg-4 col-md-6 h-100 d-none d-md-flex align-items-center justify-content-center mt-4 "
        style="background-color: var(--bs-ieee-bright-blue)"
   >
-    <img alt="itbot" src="../../../../assets/image/login/itbot.png" class="h-50" style="transform: scaleX(-1)"/>
+    <img alt="itbot" src="../../../../assets/image/login/itbot_espejado.png" class="h-50"/>
   </div>
 </div>
 </div>
