--- a/src/app/shared/components/news-card/news-card.component.html
+++ b/src/app/shared/components/news-card/news-card.component.html
@@ -1,7 +1,7 @@
 <a class="text-decoration-none" [routerLink]="['/noticias/' + noticia.reference]">
   <mat-card class="news-card">
       <img appResize [ngWidth]="400" class="news-card-img" mat-card-image
-      ngSrc="{{noticia.imageUrl}}" alt="Foto de Noticia"
+      ngSrc="{{noticia.imageUrl}}" alt="Foto de Noticia" loading="lazy"
       >
       <mat-card-content class="news-card-content">
           <mat-card-title class="clamp">{{ noticia.title }}</mat-card-title>
