--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="d-flex flex-wrap align-self-baseline">
-      <div *ngFor="let tag of data.tags" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
+      <div *ngFor="let tag of (newsData | async).tags" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
     </div>
 
   </div>
