feat: student chapter carrousel

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -134,6 +134,43 @@
       </button>
     </div>
   </div>
+
+  <div class="section gray-background">
+    <div class="news-container">
+      <div class="section-header">
+        <div class="section-header-start-line"></div>
+        <div class="section-header-content">
+          <img
+            src="../../../../../assets/image/section-icons/IEEEEventos.png"
+            alt="Events"
+            class="section-header-logo"
+          />
+          <h1 class="section-title">{{ 'HOME.CHAPTERS.TITLE' | translate }}</h1>
+        </div>
+        <div class="section-header-end-line"></div>
+        <span class="section-subtitle">{{ "HOME.CHAPTERS.CONTENT" | translate }}</span>
+      </div>
+      <div>
+        <div class="carousel-wrapper">
+          <div class="pagination-prev-wrapper">
+            <span class="swiper-button-prev swiper-events pagination-prev" id="chapters-pagination-prev"></span>
+          </div>
+          <swiper [config]="chaptersSwiperOptions" style="overflow: hidden; width: 100%;">
+            <ng-container *ngFor="let chapter of studentChapters$ | async" >
+              <ng-template swiperSlide>
+                <app-student-chapter-card [studentChapter]="chapter"></app-student-chapter-card>
+              </ng-template>
+            </ng-container>
+          </swiper>
+          <div class="pagination-next-wrapper">
+            <span class="events-swiper-button-next swiper-button-next swiper-events pagination-next" id="chapters-pagination-next"></span>
+          </div>
+        </div>
+      </div>
+      <div class="pagination-wrapper swiper-events" id="chapters-pagination-wrapper"></div>
+    </div>
+  </div>
+
   <!-- Eventos -->
   <!--
   <div class="section gray-background">
@@ -195,6 +232,6 @@
         </div>
         <div class="section-header-end-line"></div>
       </div>
-      <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
+      <app-sponsor-component [currentsponsor]="sponsors"></app-sponsor-component>
     </div>
   </div>
