--- a/src/app/shared/components/student-chapter-card/student-chapter.component.css
+++ b/src/app/shared/components/student-chapter-card/student-chapter.component.css
@@ -3,20 +3,6 @@
   width: 100%;
 }
 
-.text-on-image {
-  position: absolute;
-  top: 40%;
-  text-align: center;
-  width: 100%;
-  font-size: 2em;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 1);
-  line-height: normal;
-  letter-spacing: 1px;
-  text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000,
-    -1px -1px 0 #000;
-}
-
 .card-content-container {
   font-size: 1.25em;
 }
@@ -41,6 +27,9 @@
   line-height: normal;
 }
 
+.event-card:hover {
+  backdrop-filter: brightness(.5);
+}
 
 .event-card-img {
   width: 100%;
@@ -53,22 +42,30 @@ a:hover {
   text-decoration: none;
 }
 
-.see-more-link {
-  color: var(--bs-ieee-dark-orange);
-  font-size: 0.9em;
+.text-on-image {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  height:100%;
+  padding: 0 1rem;
+  z-index: 1000;
+  backdrop-filter: brightness(1);
+  visibility: hidden;
+  transition: backdrop-filter 0.4s;
 }
 
-@keyframes event-move {
-  from {
-    object-position: top left;
-  }
-  50% {
-    object-position: bottom right;
-  }
-  to {
-    object-position: top left;
-  }
+.event-card:hover .text-on-image {
+  visibility: visible;
+  backdrop-filter: brightness(0.4) blur(2px);
 }
+
+
 
 /* Extra styles */
 
@@ -82,18 +79,18 @@ a:hover {
 
 @media (min-width: 1000px) {
   .text-on-image {
-    font-size: 2rem;
+    font-size: 1rem;
   }
 }
 
 @media (min-width: 1500px) {
   .text-on-image {
-    font-size: 2rem;
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 400px) {
   .text-on-image {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 }
